--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ MONGO_URI=
 ADMIN_USERNAME=
 ADMIN_PASSWORD=
 JWT_SECRET=
+
+CLOUDINARY_CLOUD_NAME=seu_cloud_name
+CLOUDINARY_API_KEY=sua_api_key
+CLOUDINARY_API_SECRET=sua_api_secret
